src/test/ui/consts/const-fn-error.stderr
error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-error.rs:16:19
   |
LL |     let mut sum = 0;
   |                   ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-error.rs:16:19
   |
LL |     let mut sum = 0;
   |                   ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-fn-error.rs:19:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0019]: constant function contains unimplemented expression type
  --> $DIR/const-fn-error.rs:19:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0080]: could not evaluate constant expression
  --> $DIR/const-fn-error.rs:29:13
   |
LL |     for i in 0..x {
   |              ---- calling non-const fn `<I as std::iter::IntoIterator><std::ops::Range<usize>>::into_iter`
...
LL |     let a : [i32; f(X)]; //~ ERROR E0080
   |             ^^^^^^----^
   |                   |
   |                   inside call to `f`

error: aborting due to 5 previous errors

Some errors occurred: E0015, E0019, E0080, E0658.
For more information about an error, try `rustc --explain E0015`.
